fix: small images not showing properly

--- a/src/pages/proposal.css
+++ b/src/pages/proposal.css
@@ -41,7 +41,6 @@
 
 .ProposalDetailPage .ProposalDetailDescription img {
   max-width: 100%;
-  width: -webkit-fill-available;
 }
 
 .ProposalImagesPreview {
